# ogs

./: .gitignore  CMakeLists.txt  COPYING  Doxyfile  NOTICE  README.md  pre-commit  pre-commit-style  sample.xml
Base/: BidirectionalMap.h  CMakeLists.txt  CPUTimeTimer.cpp  CPUTimeTimer.h  CodingTools.h  DateTools.cpp  DateTools.h  FileFinder.h  FileTools.h  Logging.h  MemoryTools.h  Options.h  RunTimeTimer.cpp  RunTimeTimer.h  StringTools.cpp  StringTools.h  TimeMeasurementBase.h  binarySearch.cpp  binarySearch.h  printList.h  quicksort.h  swap.h  uniqueListInsert.h  wait.h
BaseLib/: BidirectionalMap.h  CMakeLists.txt  DateTools.cpp  Logging.h  MemWatch.cpp  MemWatch.h  StringTools.h  quicksort.h
DiscreteLib/: CMakeLists.txt  DDCDiscreteVector.h  DDCMesh.h  DiscreteDataContainer.h  DiscreteLinearEquation.h  DiscreteLinearEquationAssembler.cpp  DiscreteLinearEquationAssembler.h  DiscreteSystem.h  DiscreteVector.h  DoF.cpp  DoF.h  DofMapManager.cpp  DofMapManager.h  DomainDecomposition.h  ElementLocalAssembler.h  LisDiscreteSystem.cpp  LisDiscreteSystem.h  LisMPIDiscreteVector.h  LisMPILinearSystem.h  MPIDiscreteSystem.h  MappedEquationAddress.h  MeshBasedDiscreteLinearEquation.h  NodeDDCSerialDistributedDiscreteSystem.h  NodeDDCSerialSharedDiscreteSystem.h  OMPDiscreteSystem.h  OMPDiscreteVector.h  SerialNodeDecompositionDiscreteSystem.h  SparsityBuilder.h
DiscreteLib/Assembler/: ElementLocalAssembler.h  ElementWiseAssembler.cpp  ElementWiseAssembler.h  ElementWiseLinearEquationAssembler.cpp  ElementWiseLinearEquationAssembler.h  ElementWiseVectorAssembler.h  IDiscreteLinearEquationAssembler.h  IDiscreteVectorAssembler.h  IElemenetWiseLinearEquationLocalAssembler.h  IElemenetWiseVectorLocalAssembler.h
DiscreteLib/Core/: DataType.h  DiscreteLinearEquation.h  DiscreteSystem.h  DiscreteVector.h  IDiscreteLinearEquation.h  IDiscreteVector.h  IDiscreteVectorBase.h  LocalDataType.h
DiscreteLib/DDC/: DDCDiscreteVector.h  DomainDecomposition.h  LisDiscreteSystem.cpp  LisDiscreteSystem.h  NodeDDCSerialDistributedDiscreteSystem.h  NodeDDCSerialSharedDiscreteSystem.h
DiscreteLib/EquationId/: DofEquationIdTable.h  EquationIdStorage.h  RandomEquationIdStorage.h  SequentialEquationIdStorage.h
DiscreteLib/LinearEquation/: AbstractMeshBasedDiscreteLinearEquation.h  MeshBasedDiscreteLinearEquation.h
DiscreteLib/OpenMP/: OMPDiscreteSystem.h  OMPDiscreteVector.h
DiscreteLib/Utils/: DiscreteDataContainer.h  SparsityBuilder.h  Tools.cpp  Tools.h
DiscreteLib/Vector/: DiscreteVector.h
DiscreteLib/ogs5/: DenseMatrix.cpp  DenseMatrix.h  SparseTable.cpp  SparseTable.h  equation_class.cpp  equation_class.h  mathlib.cpp  matrix_class.cpp  matrix_class.h  par_ddc.cpp  par_ddc.h  par_ddc_group.cpp  par_ddc_group.h  rf_num_new.cpp  rf_num_new.h
DiscretizationLib/: CMakeLists.txt  DoF.h
FdmLib/: CMakeLists.txt  FDM.h  FdmFunction.h
FemLib/: BoundaryConditions.h  CMakeLists.txt  Extrapolation.h  Fem.h  FemCoorinatesMapping.h  FemDofType.h  FemElement.h  FemElementObjectContainer.h  FemFunction.h  FemFunctionProjection.h  IFemElement.h  Integration.h  Interpolation.h  Mapping.h  MeshSparseTable.h  Projection.h  ShapeFunction.h  Test.cpp  TestFunction.h  WeightFunction.h
GeoLib/: AnalyticalGeometry.cpp  AnalyticalGeometry.h  AxisAlignedBoundingBox.h  CMakeLists.txt  ClosestPair.h  Color.cpp  Color.h  CoordinateTransformation.h  EarClippingTriangulation.cpp  GEOObjects.cpp  GEOObjects.h  GeoGenerator.h  GeoObject.h  MathTools.cpp  MathTools.h  PointVec.cpp  PointVec.h  PointWithID.h  Polygon.cpp  Polygon.h  Polyline.cpp  Polyline.h  PolylineVec.h  PropertyBounds.h  QuadTree.h  Station.cpp  Station.h  Surface.h  SurfaceVec.h  TemplatePoint.h  Triangle.cpp  Triangle.h  Vector3.h
MaterialLib/: CMakeLists.txt  SolidMechanics.h
MathLib/: AnalyticalGeometry.cpp  AnalyticalGeometry.h  CMakeLists.txt  EarClippingTriangulation.cpp  EarClippingTriangulation.h  Function.h  IClonable.h  MathTools.cpp  MathTools.h  Vector.h  Vector3.h  erf.h  sparse.h
MeshLib/: CMakeLists.txt  Element.h  ElementFactory.h  Mesh.h  MeshIO.h  Node.h
ModelLib/: CMakeLists.txt  GROUNDWATER_FLOW.h  IModel.h  ModelFactory.h  Test.cpp
NumLib/: CMakeLists.txt  DataType.h  DoF.h  IFunction.h
SolutionLib/: CMakeLists.txt  DataType.h  FemProblem.h  IProblem.h  ISolution.h  Nonlinear.h  SingleStepFEM.h  SingleStepLinearFEM.h  TransientFemFunctions.h
Tests/: CMakeLists.txt  TestBase.cpp  TestCoupling.cpp  TestDiscrete.cpp  TestDoFs.cpp  TestExamples.h  TestFDM.cpp  TestFEM.cpp  TestFemNonlinaerCoupled.cpp  TestMath.cpp  TestMatrix.cpp  TestMesh.cpp  TestModel.cpp  TestNonlinear.cpp  TestNum.cpp  TestSolution.cpp  TestSolvers.cpp  TestSystemOfEquations.cpp  TestUtil.h  main.cpp
TestsMPI/: CMakeLists.txt  main.cpp
extra/: CMakeLists.txt
extra/lis/: README  (+4 more)
ogs6CUI/: CMakeLists.txt  main.cpp
ogs6THMC/: CMakeLists.txt  DiscreteSystemList.h  FemVariableBuilder.cpp  FemVariableBuilder.h  FormatterCustom.h  GeoProcessBuilder.cpp  GeoProcessBuilder.h  LinearSolverList.h  MyConvergenceCheckerFactory.h  Ogs5ToOgs6.cpp  Ogs5ToOgs6.h  Ogs6FemData.cpp  Ogs6FemData.h  Output.h  OutputController.h  OutputTiming.h  SimulationInfo.cpp  SimulationInfo.h  SimulationProperties.h  THMCSimulator.cpp  THMCSimulator.h  TXFunctionElementGroupID.h  TimeSteppingControllerWithOutput.cpp  TimeSteppingControllerWithOutput.h
ogsCUI/: CMakeLists.txt  FormatterCustom.h  main.cpp
ogsCore/: CMakeLists.txt
ogsFileIO/: CMakeLists.txt
ogsGeometry/: CMakeLists.txt
ogsMesh/: CMakeLists.txt
ogsNumerics/: CMakeLists.txt
ogsOGS6/: CMakeLists.txt  OGS5Data.cpp  OGS5Data.h  SimulationInfo.h  Simulator.cpp  Simulator.h  SimulatorInfo.cpp  SimulatorInfo.h
ogsPhysics/: CMakeLists.txt
ogsProcess/: CMakeLists.txt  ProcessBuilder.cpp  ProcessBuilder.h  ProcessBuilderListing.cpp  ProcessFactoryBase.h  TemplateTimeIndependentProcess.h
ogsProcessGeo/: CMakeLists.txt  GeoProcessBuilder.cpp  GeoProcessBuilder.h  Ogs5ToOgs6.cpp  Ogs5ToOgs6.h
ogsSimulator/: CMakeLists.txt  Ogs5ToOgs6.cpp  SimulationProperties.h  Simulator.cpp  Simulator.h  ogs6.h
(+1785 files in other folders)
